test/errors/mismatched_bracket.sg
' Test mismatched brackets
(:= test [foo bar})